# testing_apps_tcpip

./: .env.sample  .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  temp_docs_docker.md  test_performance.md
.github/workflows/: ci.yaml
2-body/: index.html
3-conclusion/: index.html
4-bibliography/: index.html
5-attachments/: index.html
app/: Dockerfile  main.py  temp_docs_api.md
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  images.py  product.py
app/core/: config.py  errors.py  jwt.py  security.py
app/crud/: __init__.py  image.py  product.py  shortcuts.py  user.py
app/db/: mongodb_utils.py  mysqldb.py  mysqlutils.py
app/models/: dbmodel.py  image.py  product.py  rwmodel.py  token.py  user.py
docs/: 2-body.md  3-conclusion.md  4-bibliography.md  5-attachments.md  SRS__TEMPLATE__rev_01.docx  index.md  propuesta.md
k6/: ci.js  options.js  simple.js  stages.js  temp_docs_k6.md
k6/test-api/: test-add-products.js  test-get-images.js  test-register-new-user.js  test-ui.js  test-user-login.js
k8s/: Vagrantfile  temp_docs_k8s_fixed.md
k8s/ansible/: cluster_setup.yml
k8s/ansible/configs/grafana/: grafana.yaml
k8s/ansible/group_vars/: all.yml
k8s/deploy-app/: app_deployment_custom.yml  mysql_statefulset_custom.yml  ui_deployment_custom.yml
k8s/shared_folder/: local_pv.yaml
project_docs/: mkdocs.yml
project_docs/docs/: 1-introduccion.md  2-body.md  about.md  index.md
propuesta/: index.html
search/: search_index.json
ui/: Dockerfile  next.config.mjs  package-lock.json  package.json
ui/components/: Navbar.module.css  Navbar.tsx  ProductCard.module.css  ProductCard.tsx  ProductDataModal.tsx  ProductRemoveModal.tsx
ui/pages/: _app.tsx  index.tsx
ui/pages/admin/: index.tsx
ui/pages/api/auth/: login.ts
ui/pages/api/image/: add.ts
ui/pages/auth/: login.module.css  login.tsx  logout.tsx
ui/utils/: constants.ts  interfaces.ts
(+7 files in other folders)
