[tool.poetry]
name = "testing-apps-tcpip-venv"
version = "0.1.0"
description = ""
authors = ["aagustinconti <aagustinconti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "1.5.3"
ansible = "^8.5.0"
fastapi = "^0.104.1"
motor = "^3.3.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
databases = "^0.8.0"
mkdocs-material = "^9.4.7"
mkdocs-material-extensions = "^1.3"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"
pydantic = "^2.4.2"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
